[tool.poetry]
name = "warbler"
version = "0.1.0"
description = ""
authors = ["AJ <skyhighzed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
appnope = "^0.1.4"
backcall = "^0.2.0"
bcrypt = "^4.2.0"
blinker = "^1.9.0"
cffi = "^1.17.1"
click = "^8.1.7"
decorator = "^5.1.1"
faker = "^33.0.0"
flask = "^3.1.0"
flask-bcrypt = "^1.0.1"
flask-debugtoolbar = "^0.16.0"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.2"
ipython = "^8.29.0"
ipython-genutils = "^0.2.0"
itsdangerous = "^2.2.0"
jedi = "^0.19.2"
jinja2 = "^3.1.4"
markupsafe = "^3.0.2"
parso = "^0.8.4"
pexpect = "^4.9.0"
pickleshare = "^0.7.5"
prompt-toolkit = "^3.0.48"
psycopg2-binary = "^2.9.10"
ptyprocess = "^0.7.0"
pycparser = "^2.22"
pygments = "^2.18.0"
python-dateutil = "^2.9.0.post0"
simplegeneric = "^0.8.1"
six = "^1.16.0"
sqlalchemy = "^2.0.36"
text-unidecode = "^1.3"
traitlets = "^5.14.3"
wcwidth = "^0.2.13"
werkzeug = "^3.1.3"
wtforms = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
